feat: switch to vercel ai to replace openai

--- a/packages/frontend/src/assets/i18n/en-us.json
+++ b/packages/frontend/src/assets/i18n/en-us.json
@@ -518,7 +518,7 @@
   "pages.assistant.welcome.3": "The cooking assistant has a message limit of 5 messages/day because of the high costs to run the AI. This limit is removed for contributors.",
   "pages.assistant.welcome.4": "This limit only applies to messages sent by you, and not to the AI's responses.",
   "pages.assistant.welcome.documentation": "Please read the assistant documentation",
-  "pages.assistant.messageLimit": "Maximum messages reached (sorry, it's costly!). Message count resets at 0:00GMT.",
+  "pages.assistant.messageLimit": "Maximum messages reached (sorry, it's costly!). Message count resets at 0:00GMT. Consider contributing for unlimited assistant messaging.",
   "pages.assistant.messageSize": "Your message is too long. Please send a shorter message.",
 
   "pages.messageThread.tabTitle": "Conversation - RecipeSage",
